[package]
name = "claude-docker-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clust = { version = "0.8.0", features = ["full"] }
dotenv = "0.15.0"
indicatif = "0.17.8"
postgres = "0.19.7"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlformat = "0.2.3"
termion = "4.0.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
